<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
  	android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.informationsystem.AddPatientData" >

    <TableRow >
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patient_data"
        android:id="@+id/lblDisplayUser" />
        
    </TableRow>

        
        <TableRow>
           <TextView 
            android:id="@+id/lblPatientId"
            android:text="@string/Patient_Id"
            android:width="120dp"
         
            />
        <EditText 
            android:id="@+id/txtPatientId"
            android:width="120dp"
            android:inputType="number"
            />
        
    </TableRow>
  
        
        <TableRow>
        <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/Patient_salutation" />

        
          <EditText 
            android:id="@+id/txtSalutation"
            android:width="120dp"
            android:inputType="text"
            />

        </TableRow>
       
    <TableRow>
           <TextView 
            android:id="@+id/lblPName"
            android:text="@string/patient_name"
            android:width="120dp"
            />
        <EditText 
            android:id="@+id/txtPName"
            android:width="120dp"
            android:inputType="text"
            />
        
    </TableRow>
        <TableRow>
           <TextView 
            android:id="@+id/lblPAddress"
            android:text="@string/patient_Address"
            android:width="120dp"
            />
        <EditText 
            android:id="@+id/txtPAddress"
            android:width="120dp"
            android:inputType="text"
            />
        
    </TableRow>
         <TableRow>
           <TextView 
            android:id="@+id/lblDEscription"
            android:text="@string/Description"
            android:width="120dp"
            />
        <EditText 
            android:id="@+id/txtDescription"
            android:width="120dp"
            android:inputType="text"
            />
        
    </TableRow>
             <TableRow>
           <TextView 
            android:id="@+id/lblMedications"
            android:text="@string/Medication"
            android:width="120dp"
            />

        <EditText
            android:id="@+id/txtMedications"
            android:inputType="text"
            android:width="120dp" />
        
    </TableRow>
    
         <TableRow>
        <Button
            android:id="@+id/btnSave" 
            android:text="@string/btnSave"
            android:width="120dp"
            android:onClick="SaveData"
            />
        <Button 
            android:id="@+id/btnCancel"
            android:width="128dp"
            android:text="@string/btnCancel"
            android:onClick="GetData"
            />
        
    </TableRow>      

</TableLayout>
